tests/specs/ecosystem/vxern/dexonline_scraper/0_2_1.test
vxern/dexonline-scraper/0.2.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --

error: TS1205 [ERROR]: Re-exporting a type when 'isolatedModules' is enabled requires using 'export type'.
export { DictionaryFlags, MatchingMode, Synthesis, Inflection, Links, Expressions, Selectors, copyrightedDictionaries };
                          ~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:42:27

